Issue #24060: merging form_events_40 to trunk.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -42,6 +42,8 @@ HINT_GENERATE_ON_SAVE=If True, the code is generated only when the form is saved
                       If False, the code is updated with each change in the form.
 PROP_EVENT_VARIABLE_NAME=Event Variable Name
 HINT_EVENT_VARIABLE_NAME=The name of the event variable parameter generated in an event handler's header.
+PROP_LISTENER_GENERATION_STYLE=Listener Generation Style
+HINT_LISTENER_GENERATION_STYLE=The style of generating code of event listeners
 PROP_SELECTION_BORDER_SIZE=Selection Border Size
 HINT_SELECTION_BORDER_SIZE=The size of the components selection border (in pixels).
 PROP_SELECTION_BORDER_COLOR=Selection Border Color
@@ -384,7 +386,7 @@ CTL_SetDesignerSize_Label=&New Size (width, height):
 
 # Events
 MSG_CannotAttach=Cannot attach to the event handler.\n\
-	The event type does not match the type of the handler.
+	The event handler is already used for an event of another type.
 MSG_CannotRename=Cannot rename to an existing event handler.\n\
 	To reattach, first remove the current handler and then attach to the existing one.
 
@@ -397,9 +399,14 @@ FMT_MSG_InvalidJavaIdentifier={0} is not a Java identifier.
 # A code generated into a new event handler method
 MSG_EventHandlerBody=// Add your handling code here:\n
 
+CTL_LISTENER_ANONYMOUS_CLASSES=Anonymous Innerclasses
+CTL_LISTENER_CEDL_INNERCLASS=One Innerclass
+CTL_LISTENER_CEDL_MAINCLASS=Main Class
+
 # Comments generated around generated variables declarations
 MSG_VariablesBegin=// Variables declaration - do not modify
 MSG_VariablesEnd=// End of variables declaration
+MSG_EventDispatchCodeComment=// Code for dispatching events from components to event handlers.\n
 
 VALUE_codeGen_generate=Generate Code
 VALUE_codeGen_serialize=Serialize
