--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -660,17 +660,17 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
       <ant dir="../xml/api" target="netbeans"/>
   </target>
 
-  <target name="all-xml/tax" depends="all-openide, all-xml/api,all-openide/deprecated">
-      <echo message="Building module xml/tax..."/>
-      <ant dir="../xml/tax" target="netbeans"/>
-  </target>
-
-  <target name="all-xml/core" depends="all-openide, all-xml/api, all-xml/tax,all-openide/deprecated,all-openide/execution,all-openide/io">
+  <target name="all-xml/core" depends="all-openide, all-xml/api, all-openide/deprecated,all-openide/execution,all-openide/io">
       <echo message="Building module xml/core..."/>
       <ant dir="../xml/core" target="netbeans"/>
   </target>
 
-  <target name="all-xml/catalog" depends="all-openide, all-xml/api, all-xml/core,all-openide/deprecated">
+  <target name="all-xml/tax" depends="all-openide, all-xml/api, all-xml/core, all-openide/deprecated">
+      <echo message="Building module xml/tax..."/>
+      <ant dir="../xml/tax" target="netbeans"/>
+  </target>
+
+ <target name="all-xml/catalog" depends="all-openide, all-xml/api, all-xml/core,all-openide/deprecated">
       <echo message="Building module xml/catalog..."/>
       <ant dir="../xml/catalog" target="netbeans"/>
   </target>
