--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
@@ -51,6 +51,7 @@ SEP_output_target=,
 # {1} - file name
 TITLE_output_notarget={0}
 TITLE_output_reused=Ant Execution
+LABEL_execution_name=Ant Execution
 
 # Localization of following key must be identical with
 # localization of key "CTL_CompileTab" from org.netbeans.core.compiler.Bundle
@@ -92,34 +93,6 @@ MSG_target_started_printed={0}:
 # {0} minutes
 # {1} seconds
 MSG_finished_target_time=Total time: {0, choice, 0#| 1#1 minute | 2#{0} minutes }{1, choice, 0#0 seconds| 1#1 second| 2#{1} seconds}
-
-# OutputWriterOutputStream
-ERR_unknown=Unknown error
-# {0} - file name where error occurred
-# {1} - text of error
-MSG_err={0} {1}
-# {0} - file name where error occurred
-# {1} - text of error
-# {2} - line number
-MSG_err_line={0} [{2}] {1}
-# {0} - file name where error occurred
-# {1} - text of error
-# {2} - line number
-# {3} - column number
-MSG_err_line_col={0} [{2}:{3}] {1}
-# {0} - file name where error occurred
-# {1} - text of error
-# {2} - line number
-# {3} - start column number
-# {4} - end column number
-MSG_err_line_col_col={0} [{2}:{3}-{4}] {1}
-# {0} - file name where error occurred
-# {1} - text of error
-# {2} - start line number
-# {3} - start column number
-# {4} - end line number
-# {5} - end column number
-MSG_err_line_col_line_col={0} [{2}:{3}-{4}:{5}] {1}
 
 # AntExecutor
 # {0} - project path
