Added QA's test tools modules to daily-alpha-nbms modules and created new special configuration for preliminary testtools nbm build.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -201,6 +201,15 @@ config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
         icebrowser, \
         jini
 
+#moduleconfig for QA's testtools
+config.fixedmodules.testtools=
+config.modules.testtools=jemmy, \
+        jellytools, \
+        jemmysupport, \
+        junit, \
+        testtools, \
+        xtest
+
 # moduleconfig for nbms in Daily Alpha Update Centre
 # consider modules icebrowser,vcscvs,jini,debuggertools
 # reconsider module cpp
@@ -216,6 +225,9 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         externaleditor, \
         freestylebrowser, \
         innertesters, \
+        jellytools, \
+        jemmysupport, \
+        junit, \
         lexer, \
         lexer/editorbridge, \
         logger, \
@@ -230,12 +242,14 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         serialversion, \
         sysprops, \
         ${local.config.tasklist}, \
+        testtools, \
         translatedfiles, \
         treefs, \
         web/jspdebug, \
         web/advanced, \
         web/taglibed, \
-        webl
+        webl, \
+        xtest
 
 # make javadoc for these packages
 # - the list will be shared for signature API tests!
