Hot fix - compilation was broken under JDK 1.3.

--- a/xml.tax/build.xml
+++ b/xml.tax/build.xml
@@ -53,6 +53,9 @@ Microsystems, Inc. All Rights Reserved.
                 <pathelement location="${lib_root}/src"/>
                 <pathelement location="${api_root}/src/"/>
                 <pathelement location="../core/src/"/>
+                <fileset dir="${nbroot}/core/external">
+                    <include name="xml-apis*.jar"/>
+                </fileset>
             </classpath>
         </javac>
 
