--- a/debugger.jpda/build.xml
+++ b/debugger.jpda/build.xml
@@ -69,6 +69,7 @@ ToDo:
         <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
         <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
 	<pathelement location="../debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
+	<pathelement location="../debuggercore/oldapi/netbeans/modules/autoload/openide-debugger.jar"/>
       </classpath>
     </javac>
   </target>
