--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -65,6 +65,7 @@ config.fixedmodules.superslim=core, \
         core/output, \
         core/deprecated, \
         java/srcmodel, \
+        debuggercore/oldapi, \
         core/javahelp, \
         core/compiler, \
         core/execution, \
@@ -270,6 +271,7 @@ config.fixedmodules.javadoc=openide, \
         diff, \
         java/api, \
         java/srcmodel, \
+        debuggercore/oldapi, \
         lexer, \
         openidex/looks, \
         mdr, \
