--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -71,6 +71,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nb_root}/java/netbeans/modules/java.jar"/>
         <pathelement location="${nb_root}/jarpackager/netbeans/modules/jarpackager.jar"/>
         <pathelement location="${nb_root}/debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
+        <pathelement location="${nb_root}/debuggercore/oldapi/netbeans/modules/autoload/openide-debugger.jar"/>
         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" />
         <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
         <pathelement location="${nb_root}/openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
