--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -230,7 +230,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module apisupport lite..."/>
     <ant dir="../apisupport/lite" target="netbeans"/>
   </target>
-  <target name="all-applet" depends="all-openide,all-debuggercore,all-openide/deprecated,all-java/srcmodel,all-openide/compiler,all-openide/execution,all-debuggercore/oldapi">
+  <target name="all-applet" depends="all-openide,all-debuggercore,all-java/srcmodel,all-openide/compiler,all-openide/execution,all-debuggercore/oldapi">
     <echo message="Building module applet..."/>
     <ant dir="../applet" target="netbeans"/>
   </target>
