--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -37,7 +37,6 @@ CTL_Cannot_clear_breakpoint=Cannot clear the breakpoint
 CTL_Thread=Thread
 CTL_stopped_at=stopped at
 CTL_line=line
-CTL_unavailable_source_file=unavailable source file
 CTL_Thread=Thread
 EXC_Debugger=Debugger exception
 CTL_Exception_event=An exception event occurred in the debugged process
@@ -45,6 +44,7 @@ CTL_Thread_death_event=Thread death event
 CTL_Process_death_event=Process death event
 CTL_Thread_stopped=Thread {0} stopped at {1}.{2} line {3}.
 CTL_Thread_stopped_no_source=Thread {0} stopped at {1}.{2} line {3} - unavailable source file.
+CTL_Thread_stopped_no_information=Thread {0} stopped at {1}.{2} - no debug information (source compiled with -g:none).
 CTL_Debugger_paused=Debugger paused
 CTL_Debugger_starting=Debugger starting
 CTL_Debugger_running=Debugger running
