--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -4,13 +4,16 @@ test.user.dir=testuserdir
 tryme.args=
 build.compiler.debug=on
 
-# Additional parameters to pass to NetBeans as it is started.
+# Additional parameters to pass to NetBeans as it is started in sanity-check mode.
 # Normally you ought not change this.
 # However those running automated builds may wish to use:
 # -J-DErrorManager.minimum=17
 # (please don't ask why it is 17)
 # which will suppress a variety of mostly harmless deprecation warnings.
-sanitystart.args.additional= 
+sanitystart.args.additional=
+# For some reason the following flag, which is very useful:
+# -J-Dnetbeans.preresolve.classes=true
+# causes a hang during startup (no thread dump available) on JDK 1.3.
 
 # Useful for "always successful" build, when you don't care of some
 # particular (and currently broken) modules
