#29273 Menu/View reordered. Also added mnemonics for explorer tab menu items and accelerator for Filesystems menu item.

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -152,6 +152,6 @@ CTL_MemoryMeterAction=Memory Meter
 MSG_Preparing_options=Preparing options...
 
 # ViewFilesystemsTabAction
-CTL_ViewFilesystemsTabAction=Filesystems
+CTL_ViewFilesystemsTabAction=Fi&lesystems
 # ViewRuntimeTabAction
-CTL_ViewRuntimeTabAction=Runtime
+CTL_ViewRuntimeTabAction=Run&time
