renaming templates -- to have "Form" in the name

--- a/form/src/org/netbeans/modules/form/resources/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/resources/Bundle.properties
@@ -13,20 +13,20 @@
 Mount/java/org-netbeans-modules-form-absolutelayout-library.xml=AbsoluteLayout
 Services/formsettings.settings=Form Editor Settings
 Templates/GUIForms/AWTForms=AWT Forms
-Templates/GUIForms/AWTForms/Applet.java=Applet
-Templates/GUIForms/AWTForms/Dialog.java=Dialog
-Templates/GUIForms/AWTForms/Frame.java=Frame
-Templates/GUIForms/AWTForms/Panel.java=Panel
+Templates/GUIForms/AWTForms/Applet.java=Applet Form
+Templates/GUIForms/AWTForms/Dialog.java=Dialog Form
+Templates/GUIForms/AWTForms/Frame.java=Frame Form
+Templates/GUIForms/AWTForms/Panel.java=Panel Form
 Templates/GUIForms/Dialogs=Sample Forms
 Templates/GUIForms/Dialogs/Application.java=Application
 Templates/GUIForms/Dialogs/MDIApplication.java=MDI Application
 Templates/GUIForms/Dialogs/OkCancelDialog.java=OK / Cancel Dialog
 Templates/GUIForms=Java GUI Forms
-Templates/GUIForms/JApplet.java=JApplet
-Templates/GUIForms/JDialog.java=JDialog
-Templates/GUIForms/JFrame.java=JFrame
-Templates/GUIForms/JInternalFrame.java=JInternalFrame
-Templates/GUIForms/JPanel.java=JPanel
+Templates/GUIForms/JApplet.java=JApplet Form
+Templates/GUIForms/JDialog.java=JDialog Form
+Templates/GUIForms/JFrame.java=JFrame Form
+Templates/GUIForms/JInternalFrame.java=JInternalFrame Form
+Templates/GUIForms/JPanel.java=JPanel Form
 Templates/GUIForms/BeanForm.java=Bean Form
 Palette/AWT=AWT
 Palette/Swing=Swing
